# ledmatrix

./: .gitignore  .gitmodules  CMakeLists.txt  c-example.c  vcpkg.json
client/: CMakeLists.txt
client/src/: ClientSocket.cpp  ClientSocket.h  main.cpp
client/src/Scenes/: GameOfLife.cpp  GameOfLife.h  ImageScene.cpp  ImageScene.h  Scene.h
renderlib/: CMakeLists.txt
renderlib/dummy/: DummyRenderer.cpp
renderlib/hzeller/: HZellerRenderer.cpp  HZellerRenderer.h
server/: CMakeLists.txt
server/dummy/: DummyRenderer.cpp
server/hzeller/: HZellerRenderer.cpp  HZellerRenderer.h
server/include/: Renderlib.h
server/src/: Renderer.cpp  Renderer.h  ServerSocket.cpp  ServerSocket.h  SignalHandler.cpp  SignalHandler.h  main.cpp
src/: GPIO.cpp  GPIO.h  main.cpp
